install(FILES
   theme_reference.svgz
   theme_reference.desktop
   theme_reference_preview.jpg
   bees_theme.svgz
   bees_theme.desktop
   bees_theme_preview.jpg
   # DESTINATION ${DATA_INSTALL_DIR}/parley/themes)
   DESTINATION ${KXMLGUI_INSTALL_DIR}/parley/themes)

#@todo frameworks one of these directories is wrong
install(FILES
   theme_reference.svgz
   theme_reference.desktop
   theme_reference_preview.jpg
   bees_theme.svgz
   bees_theme.desktop
   bees_theme_preview.jpg
   DESTINATION ${DATA_INSTALL_DIR}/parley/themes)
   # DESTINATION ${KXMLGUI_INSTALL_DIR}/parley/themes)
