INCLUDES = -I$(top_srcdir)/kvoctrain -I$(top_srcdir)/kvoctrain/kvt-core \
 -I$(top_srcdir)/kvoctrain/kvoctrain -I$(top_srcdir)/kvoctrain/kvoctrain/kvt-core \
 $(all_includes)

noinst_LTLIBRARIES = libcommondlg.la

libcommondlg_la_SOURCES = \
               NumLessonDlg.cpp ProgressDlg.cpp LessonInputDlg.cpp \
               NumLessonDlgForm.ui ProgressDlgForm.ui LessonInputDlgForm.ui

METASOURCES = AUTO
