INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../kvt-core \
 $(all_includes)

noinst_LTLIBRARIES = libcommondlg.la

libcommondlg_la_SOURCES = ProgressDlg.cpp ProgressDlgForm.ui \
	languagesettings.kcfgc prefs.kcfgc presettings.kcfgc

METASOURCES = AUTO

kde_kcfg_DATA = kvoctrain.kcfg languagesettings.kcfg presettings.kcfg
